# Harlo

./: .coverage  .gitignore  .mcp.json  AGENTS.md  AGENTS_sprint1.md  AGENTS_sprint2.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  NOTICE  PATENTS.md  README.md  agent_team.py  pyproject.toml  readme-update-prompt.md
.agent-team/designs/: phase-1.md  phase-2.md  phase-3.md  phase-4.md
.agent-team/gates/: phase-1-gate.md  phase-2-gate.md  phase-3-7-gates.md
.claude/: settings.local.json
.github/: FUNDING.yml
.hypothesis/constants/: 000bf424fdd8fdd6  004e722d2b39195a  007877f889644772  007e482ef6989729  008627a8fb629140  00d1ec1f014460c6  010258c38047fd64  016cc7dd0b49fc27  020fe9c2d451b249  025066418d5f7345  02d11723c6209821  0316d3ae566d5945  03b22a6c689b02a5  03dbcd9157731bf4  0408a018286b337c  041b82baf95116f0  046729944c8d5fe8  05425de68f8b9650  0570a7c52cd987f9  057176b40028469e  0588a2471da78b21  05c23f0d23acbeb3  060b00a50b5e88f3  06208099c85443df  065137e2e7d1293e  067138e1b3a4ebbd  06b72b234211581d  06d5eb36a00fa5bc  06e24626a47cfcd9  06e506ec6e9de252  07244af10baf52c0  0732b88abc89f8eb  0736a330b4939cf9  0736e2d4acddd01a  07475514dc0bbadb  074b65a8c27b1d80  077e52c6bf737fd3  077e9a072954968b  07c1faaa8aba88d7  0806d599e7c697e1  (+1079 more)
config/: barrier_schema.json  default_profile.yaml  example_stage.json  verification_depth.yaml
crates/hippocampus/: Cargo.toml
crates/hippocampus/src/: decay.rs  encoder.rs  graph.rs  lib.rs  query.rs  reflex.rs  search.rs  store.rs
docs/: ARCHITECTURE.md  OPENEXEC_BUILD.md  PRODUCTION.md
docs/patent/: P1_CIP_EVIDENCE.md  P1_CIP_FIGURES.md  P1_CIP_SPEC_EXCERPTS.md  P1_CIP_TEST_EVIDENCE.txt
files/: AGENTS.md  CLAUDE_ADDITIONS.md  KICKOFF.md  README.md  cognitive_state_machine_spec.md  cognitive_twin_v3.3.1_spec.md
python/cognitive_twin/: __init__.py  federated_recall.py  (+2 more)
scripts/: build_usd_openexec.bat  claude_desktop_config.json  first_session.py  health_check.py  seed_demo.py  seed_hebbian.py  setup_semantic_encoder.py  start_daemon.py  stop_daemon.py  update_claude_desktop.ps1
src/: __init__.py  bridge.py  cognitive_engine.py  cognitive_stage.py  consent.py  delegate_base.py  delegate_claude.py  delegate_claude_code.py  delegate_registry.py  engine_config.py  mcp_server.py  mock_cogexec.py  mock_usd_stage.py  observation_buffer.py  predict.py  schemas.py  stage_factory.py  train_predictor.py  trajectory_generator.py  usd_bootstrap.py  validator.py
(+269 files in other folders)
