[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "harlo"
version = "3.3.1"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "jsonschema>=4.0",
    "numpy>=1.26",
    "maturin>=1.5",
    "mcp>=1.0",
    "onnxruntime>=1.17",
    "transformers>=4.36",
    "pydantic>=2.0",
    "networkx>=3.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[project.scripts]
harlo = "harlo.mcp_server:main"

[tool.maturin]
manifest-path = "crates/hippocampus/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "harlo.hippocampus"

[tool.pytest.ini_options]
testpaths = ["tests"]