[package]
name = "hippocampus"
version = "0.1.0"
edition = "2021"

[lib]
name = "hippocampus"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
bitvec = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
